// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spgist.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 151,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "is_local": true,
                "location": 168,
                "typeName": {
                  "location": 171,
                  "names": [
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "p",
                "is_local": true,
                "location": 177,
                "typeName": {
                  "location": 179,
                  "names": [
                    {
                      "String": {
                        "sval": "point",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "spgist",
          "idxname": "spgist_point_idx",
          "indexParams": [
            {
              "IndexElem": {
                "name": "p",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 75,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 73,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 34,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 142,
                "name": "id",
              },
            },
            {
              "ResTarget": {
                "location": 146,
                "name": "p",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 124,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "g",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 198,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 201,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 182,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 156,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "g",
                            },
                          },
                        ],
                        "location": 156,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 159,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "g",
                                      },
                                    },
                                  ],
                                  "location": 165,
                                },
                              },
                              "location": 166,
                              "name": [
                                {
                                  "String": {
                                    "sval": "*",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 10,
                                  },
                                  "location": 167,
                                },
                              },
                            },
                          },
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "g",
                                      },
                                    },
                                  ],
                                  "location": 171,
                                },
                              },
                              "location": 172,
                              "name": [
                                {
                                  "String": {
                                    "sval": "*",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 10,
                                  },
                                  "location": 173,
                                },
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "point",
                            },
                          },
                        ],
                        "location": 159,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeleteStmt": {
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "id",
                      },
                    },
                  ],
                  "location": 36,
                },
              },
              "location": 39,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 5,
                  },
                  "location": 41,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VacuumStmt": {
          "is_vacuumcmd": true,
          "rels": [
            {
              "VacuumRelation": {
                "relation": {
                  "inh": true,
                  "location": 8,
                  "relname": "spgist_point_tbl",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 90,
                "name": "id",
              },
            },
            {
              "ResTarget": {
                "location": 94,
                "name": "p",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 72,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "g",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 151,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10000,
                                      },
                                      "location": 154,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 135,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 104,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "g",
                            },
                          },
                        ],
                        "location": 104,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 112,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "g",
                                      },
                                    },
                                  ],
                                  "location": 118,
                                },
                              },
                              "location": 119,
                              "name": [
                                {
                                  "String": {
                                    "sval": "*",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 10,
                                  },
                                  "location": 120,
                                },
                              },
                            },
                          },
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "g",
                                      },
                                    },
                                  ],
                                  "location": 124,
                                },
                              },
                              "location": 125,
                              "name": [
                                {
                                  "String": {
                                    "sval": "*",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 10,
                                  },
                                  "location": 126,
                                },
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "point",
                            },
                          },
                        ],
                        "location": 112,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 31,
                "name": "id",
              },
            },
            {
              "ResTarget": {
                "location": 35,
                "name": "p",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "g",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 98,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10000,
                                      },
                                      "location": 101,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 82,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 45,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "g",
                                },
                              },
                            ],
                            "location": 45,
                          },
                        },
                        "location": 46,
                        "name": [
                          {
                            "String": {
                              "sval": "+",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 100000,
                            },
                            "location": 47,
                          },
                        },
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 55,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "g",
                                          },
                                        },
                                      ],
                                      "location": 61,
                                    },
                                  },
                                  "location": 62,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "*",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 63,
                                    },
                                  },
                                },
                              },
                              "location": 65,
                              "name": [
                                {
                                  "String": {
                                    "sval": "+",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 66,
                                },
                              },
                            },
                          },
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "g",
                                          },
                                        },
                                      ],
                                      "location": 69,
                                    },
                                  },
                                  "location": 70,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "*",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 71,
                                    },
                                  },
                                },
                              },
                              "location": 73,
                              "name": [
                                {
                                  "String": {
                                    "sval": "+",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 74,
                                },
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "point",
                            },
                          },
                        ],
                        "location": 55,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeleteStmt": {
          "relation": {
            "inh": true,
            "location": 78,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "id",
                          },
                        },
                      ],
                      "location": 101,
                    },
                  },
                  "location": 104,
                  "name": [
                    {
                      "String": {
                        "sval": "%",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 2,
                      },
                      "location": 106,
                    },
                  },
                },
              },
              "location": 108,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 110,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeleteStmt": {
          "relation": {
            "inh": true,
            "location": 188,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "id",
                      },
                    },
                  ],
                  "location": 211,
                },
              },
              "location": 214,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 10000,
                  },
                  "location": 216,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VacuumStmt": {
          "is_vacuumcmd": true,
          "rels": [
            {
              "VacuumRelation": {
                "relation": {
                  "inh": true,
                  "location": 9,
                  "relname": "spgist_point_tbl",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 154,
            "relname": "spgist_box_tbl",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "is_local": true,
                "location": 169,
                "typeName": {
                  "location": 172,
                  "names": [
                    {
                      "String": {
                        "sval": "serial",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 180,
                "typeName": {
                  "location": 182,
                  "names": [
                    {
                      "String": {
                        "sval": "box",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 28,
                "name": "b",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "spgist_box_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "i",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 92,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 100,
                                      },
                                      "location": 94,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 5,
                                      },
                                      "location": 98,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 76,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "j",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 127,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 100,
                                      },
                                      "location": 129,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 5,
                                      },
                                      "location": 133,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 111,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "s",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 162,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 164,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 146,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 38,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "i",
                                        },
                                      },
                                    ],
                                    "location": 48,
                                  },
                                },
                                {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "j",
                                        },
                                      },
                                    ],
                                    "location": 50,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "point",
                                  },
                                },
                              ],
                              "location": 42,
                            },
                          },
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "i",
                                            },
                                          },
                                        ],
                                        "location": 59,
                                      },
                                    },
                                    "location": 60,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "+",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "s",
                                            },
                                          },
                                        ],
                                        "location": 61,
                                      },
                                    },
                                  },
                                },
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "j",
                                            },
                                          },
                                        ],
                                        "location": 63,
                                      },
                                    },
                                    "location": 64,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "+",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "s",
                                            },
                                          },
                                        ],
                                        "location": 65,
                                      },
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "point",
                                  },
                                },
                              ],
                              "location": 53,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "box",
                            },
                          },
                        ],
                        "location": 38,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "spgist",
          "idxname": "spgist_box_idx",
          "indexParams": [
            {
              "IndexElem": {
                "name": "b",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 32,
            "relname": "spgist_box_tbl",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeSubselect": {
                "alias": {
                  "aliasname": "v",
                  "colnames": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                  ],
                },
                "subquery": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "valuesLists": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 5,
                                      },
                                      "location": 40,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 5,
                                      },
                                      "location": 42,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "point",
                                    },
                                  },
                                ],
                                "location": 34,
                              },
                            },
                          ],
                        },
                      },
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 8,
                                      },
                                      "location": 53,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 8,
                                      },
                                      "location": 55,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "point",
                                    },
                                  },
                                ],
                                "location": 47,
                              },
                            },
                          ],
                        },
                      },
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 12,
                                      },
                                      "location": 66,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 12,
                                      },
                                      "location": 69,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "point",
                                    },
                                  },
                                ],
                                "location": 60,
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "SubLink": {
              "location": 87,
              "subLinkType": "EXISTS_SUBLINK",
              "subselect": {
                "SelectStmt": {
                  "fromClause": [
                    {
                      "RangeVar": {
                        "alias": {
                          "aliasname": "b",
                        },
                        "inh": true,
                        "location": 108,
                        "relname": "spgist_box_tbl",
                        "relpersistence": "p",
                      },
                    },
                  ],
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 101,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "A_Star": {},
                              },
                            ],
                            "location": 101,
                          },
                        },
                      },
                    },
                  ],
                  "whereClause": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 131,
                        },
                      },
                      "location": 135,
                      "name": [
                        {
                          "String": {
                            "sval": "&&",
                          },
                        },
                      ],
                      "rexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "v",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "p",
                                    },
                                  },
                                ],
                                "location": 142,
                              },
                            },
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "v",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "p",
                                    },
                                  },
                                ],
                                "location": 146,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "box",
                              },
                            },
                          ],
                          "location": 138,
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 211,
            "relname": "spgist_text_tbl",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "is_local": true,
                "location": 227,
                "typeName": {
                  "location": 230,
                  "names": [
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "t",
                "is_local": true,
                "location": 236,
                "typeName": {
                  "location": 238,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "spgist",
          "idxname": "spgist_text_idx",
          "indexParams": [
            {
              "IndexElem": {
                "name": "t",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 33,
            "relname": "spgist_text_tbl",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 55 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 31,
                "name": "id",
              },
            },
            {
              "ResTarget": {
                "location": 35,
                "name": "t",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "spgist_text_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "all": true,
              "larg": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 98,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 10000,
                                        },
                                        "location": 101,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 82,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 45,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "g",
                              },
                            },
                          ],
                          "location": 45,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 48,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "location": 48,
                                  "sval": {
                                    "sval": "f",
                                  },
                                },
                              },
                              "location": 52,
                              "name": [
                                {
                                  "String": {
                                    "sval": "||",
                                  },
                                },
                              ],
                              "rexpr": {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "location": 62,
                                        "sval": {
                                          "sval": "o",
                                        },
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 100,
                                        },
                                        "location": 67,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "repeat",
                                      },
                                    },
                                  ],
                                  "location": 55,
                                },
                              },
                            },
                          },
                          "location": 72,
                          "name": [
                            {
                              "String": {
                                "sval": "||",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "g",
                                  },
                                },
                              ],
                              "location": 75,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_UNION",
              "rarg": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 175,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1000,
                                        },
                                        "location": 178,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 159,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 127,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "g",
                              },
                            },
                          ],
                          "location": 127,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 130,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "location": 130,
                              "sval": {
                                "sval": "baaaaaaaaaaaaaar",
                              },
                            },
                          },
                          "location": 149,
                          "name": [
                            {
                              "String": {
                                "sval": "||",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "g",
                                  },
                                },
                              ],
                              "location": 152,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 60 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 217,
                "name": "id",
              },
            },
            {
              "ResTarget": {
                "location": 221,
                "name": "t",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 200,
            "relname": "spgist_text_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "g",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 296,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 100,
                                      },
                                      "location": 299,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 280,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 231,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "location": 231,
                        "name": [
                          {
                            "String": {
                              "sval": "-",
                            },
                          },
                        ],
                        "rexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "g",
                                },
                              },
                            ],
                            "location": 232,
                          },
                        },
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 235,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "location": 235,
                                "sval": {
                                  "sval": "f",
                                },
                              },
                            },
                            "location": 239,
                            "name": [
                              {
                                "String": {
                                  "sval": "||",
                                },
                              },
                            ],
                            "rexpr": {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "location": 249,
                                      "sval": {
                                        "sval": "o",
                                      },
                                    },
                                  },
                                  {
                                    "A_Expr": {
                                      "kind": "AEXPR_OP",
                                      "lexpr": {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 100,
                                          },
                                          "location": 254,
                                        },
                                      },
                                      "location": 257,
                                      "name": [
                                        {
                                          "String": {
                                            "sval": "-",
                                          },
                                        },
                                      ],
                                      "rexpr": {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "g",
                                              },
                                            },
                                          ],
                                          "location": 258,
                                        },
                                      },
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "repeat",
                                    },
                                  },
                                ],
                                "location": 242,
                              },
                            },
                          },
                        },
                        "location": 261,
                        "name": [
                          {
                            "String": {
                              "sval": "||",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "location": 264,
                            "sval": {
                              "sval": "surprise",
                            },
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "spgist",
          "idxname": "spgist_point_idx2",
          "indexParams": [
            {
              "IndexElem": {
                "name": "p",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 9,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 114,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 75,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "spgist",
          "idxname": "spgist_point_idx2",
          "indexParams": [
            {
              "IndexElem": {
                "name": "p",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 101,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 74,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 35,
            "relname": "spgist_point_tbl",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 70 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "arg": {
                            "Integer": {
                              "ival": 90,
                            },
                          },
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "fillfactor",
                          "location": 75,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_SetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 53,
            "relname": "spgist_point_idx",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "spgist_point_idx",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 74 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateDomainStmt": {
          "domainname": [
            {
              "String": {
                "sval": "spgist_text",
              },
            },
          ],
          "typeName": {
            "location": 59,
            "names": [
              {
                "String": {
                  "sval": "pg_catalog",
                },
              },
              {
                "String": {
                  "sval": "varchar",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "spgist_domain_tbl",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "f1",
                "is_local": true,
                "location": 33,
                "typeName": {
                  "location": 36,
                  "names": [
                    {
                      "String": {
                        "sval": "spgist_text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "spgist",
          "idxname": "spgist_domain_idx",
          "indexParams": [
            {
              "IndexElem": {
                "name": "f1",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 35,
            "relname": "spgist_domain_tbl",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 79 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "spgist_domain_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "fee",
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "fi",
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 55,
                          "sval": {
                            "sval": "fo",
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 63,
                          "sval": {
                            "sval": "fum",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 10,
              },
            },
          ],
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 35,
                    "relname": "spgist_domain_tbl",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 28,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 28,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 59,
                    },
                  },
                  "location": 62,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "location": 64,
                      "sval": {
                        "sval": "fo",
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 82 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "spgist_domain_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 42,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 44,
                  "sval": {
                    "sval": "fo",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 83 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 94,
            "relname": "spgist_unlogged_tbl",
            "relpersistence": "u",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "is_local": true,
                "location": 114,
                "typeName": {
                  "location": 117,
                  "names": [
                    {
                      "String": {
                        "sval": "serial",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 125,
                "typeName": {
                  "location": 127,
                  "names": [
                    {
                      "String": {
                        "sval": "box",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "spgist",
          "idxname": "spgist_unlogged_idx",
          "indexParams": [
            {
              "IndexElem": {
                "name": "b",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 37,
            "relname": "spgist_unlogged_tbl",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`spgist.sql > line 87 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 33,
                "name": "b",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "spgist_unlogged_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "i",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 82,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 100,
                                      },
                                      "location": 84,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 5,
                                      },
                                      "location": 88,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 66,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "j",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 117,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 119,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 5,
                                      },
                                      "location": 122,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 101,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 43,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "i",
                                        },
                                      },
                                    ],
                                    "location": 53,
                                  },
                                },
                                {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "j",
                                        },
                                      },
                                    ],
                                    "location": 55,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "point",
                                  },
                                },
                              ],
                              "location": 47,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "box",
                            },
                          },
                        ],
                        "location": 43,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;
